close #7 gdpr file drop

--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,23 @@ social:
 
 image: /images/authors/lakruzz.png
 
+collections:
+  blueprints:
+    output: true
+    permalink: /blueprints/:path/
+
+
 defaults:
-  - scope:
-      path: ""
+  -
+    scope:
+      path: "" # any file
     values:
-      image: /images/authors/lakruzz.png
       layout: page
+  -
+    scope:
+      type: blueprints
+    values:
+      layout: blueprint
 
 sass:
   style: compressed
