close #14 fix reference to phable repo in version txt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: jekyll build
       - run:
           name: Log version.txt
-          command: echo "Built with jekyll from $(git rev-parse --short HEAD) of phable/dataintensity.com" > _site/version.txt
+          command: echo "Built with jekyll from $(git rev-parse --short HEAD) of prolike/prolike.io" > _site/version.txt
       - save_cache:
           key: the-site-{{ .Revision }}
           paths:
