--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,9 @@ collections:
   pages:
     output: true
     permalink: /:path/
+  stories:
+    output: true
+    permalink: /stories/:path/
 
 defaults:
   -
@@ -57,6 +60,11 @@ defaults:
       type: pages
     values:
       layout: page
+  -
+    scope:
+      type: stories
+    values:
+      layout: story
 
 
 responsive_image:
