--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Prolike.io
 description: 'We run a frank and transparent business, teaching the Yipees the ins and outs of being a professional consultant, freelancer, innovator or entrepreneur'
 author: Prolike
-url: http://www.prolike.io
+url: www.prolike.io
 
 logo: img/prolike-logo.png
 
@@ -28,6 +28,8 @@ plugins:
   - jekyll-responsive-image
   - jekyll-seo-tag
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
 
 collections:
   gigs:
