close #117 get opengraph to work

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: 'We run a frank and transparent business, teaching the Yipees the i
 author: Prolike
 url: www.prolike.io
 
-logo: img/prolike-logo.png
+logo: /img/prolike-logo.png
 
 social:
   name: Prolike
