close #128 make image work in seo

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Prolike.io
 description: 'We run a frank and transparent business, teaching the Yipees the ins and outs of being a professional consultant, freelancer, innovator or entrepreneur'
 author: Prolike
-url: https://www.stage.prolike.io
+url: https://.stage.prolike.io
 
 logo: /img/prolike-logo.png
 image: /img/seo_img.png
