--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,12 @@ jobs:
       - restore_cache:
           keys:
             - the-repo-{{ .Revision }}
-      - run: |
+      - run: 
+          name: Build Jekyll
+          command: |
             export JEKYLL_PARAMS=`printenv CIRCLE_BRANCH | grep -e "^master$" && echo "--config _config.yml,_stage_config.yml" || echo ""`
             printenv JEKYLL_PARAMS
-      - run:
-          name: Build jekyll
-          command: jekyll build $JEKYLL_PARAMS           
+            jekyll build $JEKYLL_PARAMS           
       - run:
           name: Log the version
           command: cp version.txt _site/version.txt
