--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Prolike.io
 description: 'We run a frank and transparent business, teaching the Yipees the ins and outs of being a professional consultant, freelancer, innovator or entrepreneur'
 author: Prolike
 url: https://stage.prolike.io
+paginate: 24
+paginate_path: "/stories/page:num/"
 
 logo: /img/prolike-logo.png
 image: /img/seo_img.png
@@ -39,6 +41,9 @@ collections:
   pages:
     output: true
     permalink: /:path/
+  stories:
+    output: true
+    permalink: /stories/:path/
 
 defaults:
   -
@@ -56,6 +61,11 @@ defaults:
       type: pages
     values:
       layout: page
+  -
+    scope:
+      type: posts
+    values:
+      layout: story
   
 
 
