close #159 make zenhub story

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Prolike.io
 description: 'We run a frank and transparent business, teaching the Yipees the ins and outs of being a professional consultant, freelancer, innovator or entrepreneur'
 author: Prolike
-url: https://stage.prolike.io
+url: https://prolike.io
 paginate: 24
 paginate_path: "/stories/page:num/"
 
