close #166 change prolike logo to seo img

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https:/www.prolike.io
 paginate: 24
 paginate_path: "/stories/page:num/"
 
-logo: /img/prolike-logo.png
+logo: /img/seo_img.png
 image: /img/seo_img.png
 
 social:
