--- a/_stage_config.yml
+++ b/_stage_config.yml
@@ -3,7 +3,7 @@ description: 'We run a frank and transparent business, teaching the Yipees the i
 author: Prolike
 url: https://stage.prolike.io
 
-logo: /img/prolike-logo.png
+logo: /img/seo_img.png
 image: /img/seo_img.png
 
 social:
