--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ collections:
   pages:
     output: true
     permalink: /:path/
-  stories:
+  posts:
     output: true
-    permalink: /stories/:path/
+    permalink: /posts/:path/
 
 defaults:
   -
@@ -63,7 +63,7 @@ defaults:
       layout: page
   -
     scope:
-      type: stories
+      type: posts
     values:
       layout: story
   
