--- a/_stage_config.yml
+++ b/_stage_config.yml
@@ -46,7 +46,7 @@ collections:
     permalink: /:path/
   stories:
     output: true
-    permalink: /stories/:path/
+    permalink: /posts/:path/
 
 defaults:
   -
@@ -66,7 +66,7 @@ defaults:
       layout: page
   -
     scope:
-      type: stories
+      type: posts
     values:
       layout: story
   
