--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,17 +65,17 @@ jobs:
             - _site
             - .circleci
 
-  html-proofer:
-    working_directory: /app
-    docker:
-      - image: 18fgsa/html-proofer
-    steps:
-      - restore_cache:
-          keys:
-            - the-built-repo-
-      - run:
-          name: Htmlproofer
-          command: htmlproofer --allow-hash-href  --enforce-https  --check-favicon --check-opengraph --report-missing-names --report-invalid-tags  -- _site
+  # html-proofer:
+  #   working_directory: /app
+  #   docker:
+  #     - image: 18fgsa/html-proofer
+  #   steps:
+  #     - restore_cache:
+  #         keys:
+  #           - the-built-repo-
+  #     - run:
+  #         name: Htmlproofer
+  #         command: htmlproofer --allow-hash-href  --enforce-https  --check-favicon --check-opengraph --report-missing-names --report-invalid-tags  -- _site
 
   deliver:
     working_directory: /app
@@ -142,20 +142,19 @@ workflows:
               only: /.*/
             branches:
               only: /.*/
-      - html-proofer: # Verify that the thing to deploy is good
-          requires:
-            - prep-repo
-            - jekyll-build
-          filters:
-            tags:
-              only: /.*/
-            branches:
-              only: /.*/
+      # - html-proofer: # Verify that the thing to deploy is good
+      #     requires:
+      #       - prep-repo
+      #       - jekyll-build
+      #     filters:
+      #       tags:
+      #         only: /.*/
+      #       branches:
+      #         only: /.*/
       - deliver: # Push the target branch to remote - only when all is good and only on ready branches
           requires:
             - prep-repo
             - jekyll-build
-            - html-proofer
           filters:
             branches:
               only:
@@ -164,7 +163,6 @@ workflows:
           requires:
             - prep-repo
             - jekyll-build
-            - html-proofer
           filters:
             branches:
               only:
@@ -173,7 +171,6 @@ workflows:
           requires:
             - prep-repo
             - jekyll-build
-            - html-proofer
           filters:
             branches:
               ignore: /.*/
