close #352 combine anything html and anythings html

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ defaults:
     scope:
       type: posts
     values:
-      layout: anything
+      layout: anything-post
   -
     scope:
       type: customers
