close #277 page title revisited

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Prolike.io
+title: Prolike
 description: 'We run a frank and transparent business, teaching the Yipees the ins and outs of being a professional consultant, freelancer, innovator or entrepreneur'
 author: Prolike
 paginate: 24
