close #371 make unpublished posts visible on stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,9 @@ jobs:
           name:  Build "stage" or "production".
           command: |
             [[ -z "$CIRCLE_TAG" ]] && export JEKYLL_ENV=stage || export JEKYLL_ENV=production
+            export JEKYLL_PARAMS=`printenv CIRCLE_BRANCH | grep -e "^master$" && echo "--config _config.yml,_stage_config.yml" || echo ""`
             printenv JEKYLL_ENV
-            jekyll build
+            jekyll build JEKYLL_PARAMS
       - run:
           name: Log the version
           command: cp version.txt _site/version.txt
