--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
             export JEKYLL_PARAMS=`printenv CIRCLE_BRANCH | grep -e "^master$" && echo "--config _config.yml,_stage_config.yml" || echo ""`
             printenv JEKYLL_PARAMS
             printenv JEKYLL_ENV
-            jekyll build JEKYLL_PARAMS
+            jekyll build $JEKYLL_PARAMS
       - run:
           name: Log the version
           command: cp version.txt _site/version.txt
