--- a/_dev_config.yml
+++ b/_dev_config.yml
@@ -39,8 +39,8 @@ strict_front_matter: true
 
 # How much to render? These all default to false
 show_drafts: false
-future: false
-unpublished: false
+future: true
+unpublished: true
 
 
 # Make the machine talk to you
