--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ paginate: 24
 paginate_path: "/stories/page:num/"
 stage_site: https://stage.prolike.io
 prod_site: https://www.prolike.io
+future: true
 
 logo: /images/logos/seo_img.png
 image: /images/logos/seo_img.png
