--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,9 @@ collections:
   partners:
     output: true
     permalink: partners/:title/
+  services:
+    output: true
+    permalink: services/:title/
 
 
 defaults:
@@ -94,6 +97,11 @@ defaults:
       type: partners
     values:
       layout: partner
+  -
+    scope:
+      type: services
+    values:
+      layout: service
 
 
 
