close #446 make services link to a google form

--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,11 @@ defaults:
       type: services
     values:
       layout: service
+  -
+    scope:
+      type: services
+    values:
+      layout: services-post
 
 
 
