close #437 add text for the services page

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ collections:
     permalink: partners/:title/
   services:
     output: true
-    permalink: services/:title/
+    permalink: /services/:title/
 
 
 defaults:
