--- a/_dev_config.yml
+++ b/_dev_config.yml
@@ -40,7 +40,7 @@ strict_front_matter: true
 # How much to render? These all default to false
 show_drafts: false
 
-unpublished: false
+unpublished: true
 
 # Make the machine talk to you
 verbose: false
