close #595 clean up on sass and last mixins

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ defaults:
     scope:
       type: gigs
     values:
-      layout: list-detail
+      layout: gig
   -
     scope:
       type: partners
